Add CutStockAPI
